src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> DeclFuncVar DeclProg
Rule 2     DeclFuncVar -> Tipo ID DeclVar ; DeclFuncVar
Rule 3     DeclFuncVar -> Tipo ID [ INTCONST ] DeclVar ; DeclFuncVar
Rule 4     DeclFuncVar -> Tipo ID DeclFunc DeclFuncVar
Rule 5     DeclFuncVar -> empty
Rule 6     DeclVar -> , ID DeclVar
Rule 7     DeclVar -> , ID [ INTCONST ] DeclVar
Rule 8     DeclVar -> empty
Rule 9     DeclProg -> PROGRAMA Bloco
Rule 10    DeclFunc -> ( ListaParametros ) Bloco
Rule 11    ListaParametros -> empty
Rule 12    ListaParametros -> ListaParametrosCont
Rule 13    ListaParametrosCont -> Tipo ID
Rule 14    ListaParametrosCont -> Tipo ID [ ]
Rule 15    ListaParametrosCont -> Tipo ID , ListaParametrosCont
Rule 16    ListaParametrosCont -> Tipo ID [ ] , ListaParametrosCont
Rule 17    Bloco -> { ListaDeclVar ListaComando }
Rule 18    Bloco -> { ListaDeclVar }
Rule 19    ListaDeclVar -> empty
Rule 20    ListaDeclVar -> Tipo ID DeclVar ; ListaDeclVar
Rule 21    ListaDeclVar -> Tipo ID [ INTCONST ] DeclVar ; ListaDeclVar
Rule 22    Tipo -> INT
Rule 23    Tipo -> CAR
Rule 24    ListaComando -> Comando
Rule 25    ListaComando -> Comando ListaComando
Rule 26    Comando -> ;
Rule 27    Comando -> RETORNE Expr ;
Rule 28    Comando -> LEIA LValueExpr ;
Rule 29    Comando -> ESCREVA Expr ;
Rule 30    Comando -> ESCREVA STRING ;
Rule 31    Comando -> NOVALINHA ;
Rule 32    Comando -> SE ( Expr ) ENTAO Comando
Rule 33    Comando -> SE ( Expr ) ENTAO Comando SENAO Comando
Rule 34    Comando -> Expr ;
Rule 35    Comando -> ENQUANTO ( Expr ) EXECUTE Comando
Rule 36    Comando -> Bloco
Rule 37    Expr -> AssignExpr
Rule 38    AssignExpr -> CondExpr
Rule 39    AssignExpr -> LValueExpr = AssignExpr
Rule 40    CondExpr -> OrExpr
Rule 41    CondExpr -> OrExpr ? Expr : CondExpr
Rule 42    OrExpr -> OrExpr OU AndExpr
Rule 43    OrExpr -> AndExpr
Rule 44    AndExpr -> AndExpr E EqExpr
Rule 45    AndExpr -> EqExpr
Rule 46    EqExpr -> EqExpr EQUAL DesigExpr
Rule 47    EqExpr -> DesigExpr
Rule 48    EqExpr -> EqExpr DIFF DesigExpr
Rule 49    DesigExpr -> DesigExpr < AddExpr
Rule 50    DesigExpr -> DesigExpr > AddExpr
Rule 51    DesigExpr -> AddExpr
Rule 52    DesigExpr -> DesigExpr GEQ AddExpr
Rule 53    DesigExpr -> DesigExpr LEQ AddExpr
Rule 54    AddExpr -> AddExpr + MulExpr
Rule 55    AddExpr -> AddExpr - MulExpr
Rule 56    AddExpr -> MulExpr
Rule 57    MulExpr -> MulExpr * UnExpr
Rule 58    MulExpr -> MulExpr / UnExpr
Rule 59    MulExpr -> MulExpr % UnExpr
Rule 60    MulExpr -> UnExpr
Rule 61    UnExpr -> - PrimExpr
Rule 62    UnExpr -> ! PrimExpr
Rule 63    UnExpr -> PrimExpr
Rule 64    LValueExpr -> ID [ Expr ]
Rule 65    LValueExpr -> ID
Rule 66    PrimExpr -> ID ( )
Rule 67    PrimExpr -> ID ( ListExpr )
Rule 68    PrimExpr -> ID [ Expr ]
Rule 69    PrimExpr -> ( Expr )
Rule 70    PrimExpr -> CARCONST
Rule 71    PrimExpr -> INTCONST
Rule 72    PrimExpr -> ID
Rule 73    ListExpr -> AssignExpr
Rule 74    ListExpr -> ListExpr , AssignExpr
Rule 75    empty -> <empty>

Terminals, with rules where they appear

!                    : 62
%                    : 59
(                    : 10 32 33 35 66 67 69
)                    : 10 32 33 35 66 67 69
*                    : 57
+                    : 54
,                    : 6 7 15 16 74
-                    : 55 61
/                    : 58
:                    : 41
;                    : 2 3 20 21 26 27 28 29 30 31 34
<                    : 49
=                    : 39
>                    : 50
?                    : 41
CAR                  : 23
CARCONST             : 70
DIFF                 : 48
E                    : 44
ENQUANTO             : 35
ENTAO                : 32 33
EQUAL                : 46
ESCREVA              : 29 30
EXECUTE              : 35
GEQ                  : 52
ID                   : 2 3 4 6 7 13 14 15 16 20 21 64 65 66 67 68 72
INT                  : 22
INTCONST             : 3 7 21 71
LEIA                 : 28
LEQ                  : 53
NOVALINHA            : 31
OU                   : 42
PROGRAMA             : 9
RETORNE              : 27
SE                   : 32 33
SENAO                : 33
STRING               : 30
[                    : 3 7 14 16 21 64 68
]                    : 3 7 14 16 21 64 68
error                : 
{                    : 17 18
}                    : 17 18

Nonterminals, with rules where they appear

AddExpr              : 49 50 51 52 53 54 55
AndExpr              : 42 43 44
AssignExpr           : 37 39 73 74
Bloco                : 9 10 36
Comando              : 24 25 32 33 33 35
CondExpr             : 38 41
DeclFunc             : 4
DeclFuncVar          : 1 2 3 4
DeclProg             : 1
DeclVar              : 2 3 6 7 20 21
DesigExpr            : 46 47 48 49 50 52 53
EqExpr               : 44 45 46 48
Expr                 : 27 29 32 33 34 35 41 64 68 69
LValueExpr           : 28 39
ListExpr             : 67 74
ListaComando         : 17 25
ListaDeclVar         : 17 18 20 21
ListaParametros      : 10
ListaParametrosCont  : 12 15 16
MulExpr              : 54 55 56 57 58 59
OrExpr               : 40 41 42
PrimExpr             : 61 62 63
Programa             : 0
Tipo                 : 2 3 4 13 14 15 16 20 21
UnExpr               : 57 58 59 60
empty                : 5 8 11 19

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . DeclFuncVar DeclProg
    (2) DeclFuncVar -> . Tipo ID DeclVar ; DeclFuncVar
    (3) DeclFuncVar -> . Tipo ID [ INTCONST ] DeclVar ; DeclFuncVar
    (4) DeclFuncVar -> . Tipo ID DeclFunc DeclFuncVar
    (5) DeclFuncVar -> . empty
    (22) Tipo -> . INT
    (23) Tipo -> . CAR
    (75) empty -> .

    INT             shift and go to state 5
    CAR             shift and go to state 6
    PROGRAMA        reduce using rule 75 (empty -> .)

    Programa                       shift and go to state 1
    DeclFuncVar                    shift and go to state 2
    Tipo                           shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> DeclFuncVar . DeclProg
    (9) DeclProg -> . PROGRAMA Bloco

    PROGRAMA        shift and go to state 8

    DeclProg                       shift and go to state 7

state 3

    (2) DeclFuncVar -> Tipo . ID DeclVar ; DeclFuncVar
    (3) DeclFuncVar -> Tipo . ID [ INTCONST ] DeclVar ; DeclFuncVar
    (4) DeclFuncVar -> Tipo . ID DeclFunc DeclFuncVar

    ID              shift and go to state 9


state 4

    (5) DeclFuncVar -> empty .

    PROGRAMA        reduce using rule 5 (DeclFuncVar -> empty .)


state 5

    (22) Tipo -> INT .

    ID              reduce using rule 22 (Tipo -> INT .)


state 6

    (23) Tipo -> CAR .

    ID              reduce using rule 23 (Tipo -> CAR .)


state 7

    (1) Programa -> DeclFuncVar DeclProg .

    $end            reduce using rule 1 (Programa -> DeclFuncVar DeclProg .)


state 8

    (9) DeclProg -> PROGRAMA . Bloco
    (17) Bloco -> . { ListaDeclVar ListaComando }
    (18) Bloco -> . { ListaDeclVar }

    {               shift and go to state 11

    Bloco                          shift and go to state 10

state 9

    (2) DeclFuncVar -> Tipo ID . DeclVar ; DeclFuncVar
    (3) DeclFuncVar -> Tipo ID . [ INTCONST ] DeclVar ; DeclFuncVar
    (4) DeclFuncVar -> Tipo ID . DeclFunc DeclFuncVar
    (6) DeclVar -> . , ID DeclVar
    (7) DeclVar -> . , ID [ INTCONST ] DeclVar
    (8) DeclVar -> . empty
    (10) DeclFunc -> . ( ListaParametros ) Bloco
    (75) empty -> .

    [               shift and go to state 13
    ,               shift and go to state 15
    (               shift and go to state 17
    ;               reduce using rule 75 (empty -> .)

    DeclVar                        shift and go to state 12
    DeclFunc                       shift and go to state 14
    empty                          shift and go to state 16

state 10

    (9) DeclProg -> PROGRAMA Bloco .

    $end            reduce using rule 9 (DeclProg -> PROGRAMA Bloco .)


state 11

    (17) Bloco -> { . ListaDeclVar ListaComando }
    (18) Bloco -> { . ListaDeclVar }
    (19) ListaDeclVar -> . empty
    (20) ListaDeclVar -> . Tipo ID DeclVar ; ListaDeclVar
    (21) ListaDeclVar -> . Tipo ID [ INTCONST ] DeclVar ; ListaDeclVar
    (75) empty -> .
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    }               reduce using rule 75 (empty -> .)
    ;               reduce using rule 75 (empty -> .)
    RETORNE         reduce using rule 75 (empty -> .)
    LEIA            reduce using rule 75 (empty -> .)
    ESCREVA         reduce using rule 75 (empty -> .)
    NOVALINHA       reduce using rule 75 (empty -> .)
    SE              reduce using rule 75 (empty -> .)
    ENQUANTO        reduce using rule 75 (empty -> .)
    {               reduce using rule 75 (empty -> .)
    ID              reduce using rule 75 (empty -> .)
    -               reduce using rule 75 (empty -> .)
    !               reduce using rule 75 (empty -> .)
    (               reduce using rule 75 (empty -> .)
    CARCONST        reduce using rule 75 (empty -> .)
    INTCONST        reduce using rule 75 (empty -> .)
    INT             shift and go to state 5
    CAR             shift and go to state 6

    ListaDeclVar                   shift and go to state 18
    empty                          shift and go to state 19
    Tipo                           shift and go to state 20

state 12

    (2) DeclFuncVar -> Tipo ID DeclVar . ; DeclFuncVar

    ;               shift and go to state 21


state 13

    (3) DeclFuncVar -> Tipo ID [ . INTCONST ] DeclVar ; DeclFuncVar

    INTCONST        shift and go to state 22


state 14

    (4) DeclFuncVar -> Tipo ID DeclFunc . DeclFuncVar
    (2) DeclFuncVar -> . Tipo ID DeclVar ; DeclFuncVar
    (3) DeclFuncVar -> . Tipo ID [ INTCONST ] DeclVar ; DeclFuncVar
    (4) DeclFuncVar -> . Tipo ID DeclFunc DeclFuncVar
    (5) DeclFuncVar -> . empty
    (22) Tipo -> . INT
    (23) Tipo -> . CAR
    (75) empty -> .

    INT             shift and go to state 5
    CAR             shift and go to state 6
    PROGRAMA        reduce using rule 75 (empty -> .)

    Tipo                           shift and go to state 3
    DeclFuncVar                    shift and go to state 23
    empty                          shift and go to state 4

state 15

    (6) DeclVar -> , . ID DeclVar
    (7) DeclVar -> , . ID [ INTCONST ] DeclVar

    ID              shift and go to state 24


state 16

    (8) DeclVar -> empty .

    ;               reduce using rule 8 (DeclVar -> empty .)


state 17

    (10) DeclFunc -> ( . ListaParametros ) Bloco
    (11) ListaParametros -> . empty
    (12) ListaParametros -> . ListaParametrosCont
    (75) empty -> .
    (13) ListaParametrosCont -> . Tipo ID
    (14) ListaParametrosCont -> . Tipo ID [ ]
    (15) ListaParametrosCont -> . Tipo ID , ListaParametrosCont
    (16) ListaParametrosCont -> . Tipo ID [ ] , ListaParametrosCont
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    )               reduce using rule 75 (empty -> .)
    INT             shift and go to state 5
    CAR             shift and go to state 6

    ListaParametros                shift and go to state 25
    empty                          shift and go to state 26
    ListaParametrosCont            shift and go to state 27
    Tipo                           shift and go to state 28

state 18

    (17) Bloco -> { ListaDeclVar . ListaComando }
    (18) Bloco -> { ListaDeclVar . }
    (24) ListaComando -> . Comando
    (25) ListaComando -> . Comando ListaComando
    (26) Comando -> . ;
    (27) Comando -> . RETORNE Expr ;
    (28) Comando -> . LEIA LValueExpr ;
    (29) Comando -> . ESCREVA Expr ;
    (30) Comando -> . ESCREVA STRING ;
    (31) Comando -> . NOVALINHA ;
    (32) Comando -> . SE ( Expr ) ENTAO Comando
    (33) Comando -> . SE ( Expr ) ENTAO Comando SENAO Comando
    (34) Comando -> . Expr ;
    (35) Comando -> . ENQUANTO ( Expr ) EXECUTE Comando
    (36) Comando -> . Bloco
    (37) Expr -> . AssignExpr
    (17) Bloco -> . { ListaDeclVar ListaComando }
    (18) Bloco -> . { ListaDeclVar }
    (38) AssignExpr -> . CondExpr
    (39) AssignExpr -> . LValueExpr = AssignExpr
    (40) CondExpr -> . OrExpr
    (41) CondExpr -> . OrExpr ? Expr : CondExpr
    (64) LValueExpr -> . ID [ Expr ]
    (65) LValueExpr -> . ID
    (42) OrExpr -> . OrExpr OU AndExpr
    (43) OrExpr -> . AndExpr
    (44) AndExpr -> . AndExpr E EqExpr
    (45) AndExpr -> . EqExpr
    (46) EqExpr -> . EqExpr EQUAL DesigExpr
    (47) EqExpr -> . DesigExpr
    (48) EqExpr -> . EqExpr DIFF DesigExpr
    (49) DesigExpr -> . DesigExpr < AddExpr
    (50) DesigExpr -> . DesigExpr > AddExpr
    (51) DesigExpr -> . AddExpr
    (52) DesigExpr -> . DesigExpr GEQ AddExpr
    (53) DesigExpr -> . DesigExpr LEQ AddExpr
    (54) AddExpr -> . AddExpr + MulExpr
    (55) AddExpr -> . AddExpr - MulExpr
    (56) AddExpr -> . MulExpr
    (57) MulExpr -> . MulExpr * UnExpr
    (58) MulExpr -> . MulExpr / UnExpr
    (59) MulExpr -> . MulExpr % UnExpr
    (60) MulExpr -> . UnExpr
    (61) UnExpr -> . - PrimExpr
    (62) UnExpr -> . ! PrimExpr
    (63) UnExpr -> . PrimExpr
    (66) PrimExpr -> . ID ( )
    (67) PrimExpr -> . ID ( ListExpr )
    (68) PrimExpr -> . ID [ Expr ]
    (69) PrimExpr -> . ( Expr )
    (70) PrimExpr -> . CARCONST
    (71) PrimExpr -> . INTCONST
    (72) PrimExpr -> . ID

    }               shift and go to state 30
    ;               shift and go to state 32
    RETORNE         shift and go to state 33
    LEIA            shift and go to state 35
    ESCREVA         shift and go to state 37
    NOVALINHA       shift and go to state 38
    SE              shift and go to state 39
    ENQUANTO        shift and go to state 41
    {               shift and go to state 11
    ID              shift and go to state 46
    -               shift and go to state 52
    !               shift and go to state 55
    (               shift and go to state 40
    CARCONST        shift and go to state 56
    INTCONST        shift and go to state 57

    ListaComando                   shift and go to state 29
    Comando                        shift and go to state 31
    Expr                           shift and go to state 34
    LValueExpr                     shift and go to state 36
    Bloco                          shift and go to state 42
    AssignExpr                     shift and go to state 43
    CondExpr                       shift and go to state 44
    OrExpr                         shift and go to state 45
    AndExpr                        shift and go to state 47
    EqExpr                         shift and go to state 48
    DesigExpr                      shift and go to state 49
    AddExpr                        shift and go to state 50
    MulExpr                        shift and go to state 51
    UnExpr                         shift and go to state 53
    PrimExpr                       shift and go to state 54

state 19

    (19) ListaDeclVar -> empty .

    }               reduce using rule 19 (ListaDeclVar -> empty .)
    ;               reduce using rule 19 (ListaDeclVar -> empty .)
    RETORNE         reduce using rule 19 (ListaDeclVar -> empty .)
    LEIA            reduce using rule 19 (ListaDeclVar -> empty .)
    ESCREVA         reduce using rule 19 (ListaDeclVar -> empty .)
    NOVALINHA       reduce using rule 19 (ListaDeclVar -> empty .)
    SE              reduce using rule 19 (ListaDeclVar -> empty .)
    ENQUANTO        reduce using rule 19 (ListaDeclVar -> empty .)
    {               reduce using rule 19 (ListaDeclVar -> empty .)
    ID              reduce using rule 19 (ListaDeclVar -> empty .)
    -               reduce using rule 19 (ListaDeclVar -> empty .)
    !               reduce using rule 19 (ListaDeclVar -> empty .)
    (               reduce using rule 19 (ListaDeclVar -> empty .)
    CARCONST        reduce using rule 19 (ListaDeclVar -> empty .)
    INTCONST        reduce using rule 19 (ListaDeclVar -> empty .)


state 20

    (20) ListaDeclVar -> Tipo . ID DeclVar ; ListaDeclVar
    (21) ListaDeclVar -> Tipo . ID [ INTCONST ] DeclVar ; ListaDeclVar

    ID              shift and go to state 58


state 21

    (2) DeclFuncVar -> Tipo ID DeclVar ; . DeclFuncVar
    (2) DeclFuncVar -> . Tipo ID DeclVar ; DeclFuncVar
    (3) DeclFuncVar -> . Tipo ID [ INTCONST ] DeclVar ; DeclFuncVar
    (4) DeclFuncVar -> . Tipo ID DeclFunc DeclFuncVar
    (5) DeclFuncVar -> . empty
    (22) Tipo -> . INT
    (23) Tipo -> . CAR
    (75) empty -> .

    INT             shift and go to state 5
    CAR             shift and go to state 6
    PROGRAMA        reduce using rule 75 (empty -> .)

    Tipo                           shift and go to state 3
    DeclFuncVar                    shift and go to state 59
    empty                          shift and go to state 4

state 22

    (3) DeclFuncVar -> Tipo ID [ INTCONST . ] DeclVar ; DeclFuncVar

    ]               shift and go to state 60


state 23

    (4) DeclFuncVar -> Tipo ID DeclFunc DeclFuncVar .

    PROGRAMA        reduce using rule 4 (DeclFuncVar -> Tipo ID DeclFunc DeclFuncVar .)


state 24

    (6) DeclVar -> , ID . DeclVar
    (7) DeclVar -> , ID . [ INTCONST ] DeclVar
    (6) DeclVar -> . , ID DeclVar
    (7) DeclVar -> . , ID [ INTCONST ] DeclVar
    (8) DeclVar -> . empty
    (75) empty -> .

    [               shift and go to state 62
    ,               shift and go to state 15
    ;               reduce using rule 75 (empty -> .)

    DeclVar                        shift and go to state 61
    empty                          shift and go to state 16

state 25

    (10) DeclFunc -> ( ListaParametros . ) Bloco

    )               shift and go to state 63


state 26

    (11) ListaParametros -> empty .

    )               reduce using rule 11 (ListaParametros -> empty .)


state 27

    (12) ListaParametros -> ListaParametrosCont .

    )               reduce using rule 12 (ListaParametros -> ListaParametrosCont .)


state 28
